# LLVM_course

./: .gitignore  CMakeLists.txt  LLVM_course  Makefile  README.md  app.ll  launch.sh  sim.ll
CustomPass/: README.md  analysis.py  log_passes.cpp  output.txt  pass.bash  pass.cpp
IRGenerator/: README.md  app_gen.ll  app_ir.cpp  generate.sh
LifeGame/: app.cpp  life.cpp  life.h  main.cpp  sim.cpp  sim.h
include/: life.h
maks/: CMakeLists.txt
src/: life.cpp  main.cpp
